<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".RegisterEmptyActivity" >

	<ScrollView
		android:id="@+id/register_empty"
		android:layout_width="match_parent"
		android:layout_height="match_parent" >

		<RelativeLayout
			android:id="@+id/content_container"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >

			<View
				android:id="@+id/_bg__register_empty"
				android:background="@drawable/_bg__login___kosong_shape"
				android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="428dp"
				android:layout_height="926dp" />

			<View
				android:id="@+id/rectangle_5"
				android:background="@drawable/rectangle_5_shape"
				android:layout_marginStart="139dp"
				android:layout_marginTop="905dp"
				android:layout_width="151dp"
				android:layout_height="5dp" />


			<RelativeLayout
				android:id="@+id/status_bar"
				android:layout_marginTop="15dp"
				android:layout_marginStart="35dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" >


				<RelativeLayout
					android:id="@+id/group_5"
					android:layout_marginTop="2dp"
					android:layout_marginStart="284dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" >

					<ImageView
						android:id="@+id/wifi"
						android:src="@drawable/wifi"
						android:contentDescription="wifi"
						android:layout_marginStart="24dp"
						android:layout_marginTop="0dp"
						android:layout_width="18dp"
						android:layout_height="13dp" />


					<RelativeLayout
						android:id="@+id/__battery"
						android:layout_marginTop="0dp"
						android:layout_marginStart="47dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" >

						<ImageView
							android:id="@+id/fill"
							android:src="@drawable/fill"
							android:contentDescription="fill"
							android:layout_marginStart="1.92dp"
							android:layout_marginTop="1.92dp"
							android:layout_width="20.19dp"
							android:layout_height="8.65dp" />

						<ImageView
							android:id="@+id/outline"
							android:src="@drawable/outline"
							android:contentDescription="outline"
							android:alpha="0.40000000596046"
							android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="26.6dp"
							android:layout_height="12.5dp" />

					</RelativeLayout>

					<ImageView
						android:id="@+id/reception"
						android:src="@drawable/reception"
						android:contentDescription="reception"
						android:layout_marginStart="0dp"
						android:layout_marginTop="1dp"
						android:layout_width="18.15dp"
						android:layout_height="11dp" />

				</RelativeLayout>

				<TextView
					android:id="@+id/time"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="18sp"
					android:textColor="@color/time_color"
					android:layout_marginLeft="-3dp"
					android:layout_marginTop="0dp"
					android:layout_width="60dp"
					android:layout_height="31dp"
					android:text="@string/time_string" />

			</RelativeLayout>

			<RelativeLayout
				android:id="@+id/buat_akun"
				android:layout_marginTop="172dp"
				android:layout_marginStart="35dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" >

				<TextView
					android:id="@+id/already_have_an_account__login"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="16sp"
					android:textColor="@color/already_have_an_account__login_color"
					android:layout_marginLeft="58dp"
					android:layout_marginTop="524dp"
					android:layout_width="253dp"
					android:layout_height="32dp"
					android:text="@string/already_have_an_account__login_string" />

				<TextView
					android:id="@+id/sign_up_new_account"
					android:textStyle="bold"
					android:textSize="38sp"
					android:textColor="@color/time_color"
					android:layout_marginLeft="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="327dp"
					android:layout_height="127dp"
					android:text="@string/sign_up_new_account_string" />


				<RelativeLayout
					android:id="@+id/register_button"
					android:layout_marginTop="450dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" >

					<View
						android:id="@+id/rectangle_29"
						android:background="@drawable/rectangle_29_shape"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="358dp"
						android:layout_height="57dp" />

					<TextView
						android:id="@+id/button"
						android:textStyle="bold"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="16sp"
						android:textColor="@color/button_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="358dp"
						android:layout_height="57dp"
						android:text="@string/button_string" />

				</RelativeLayout>

				<View
					android:id="@+id/rectangle_ek4"
					android:background="@drawable/rectangle_ek4_shape"
					android:layout_marginStart="0dp"
					android:layout_marginTop="142dp"
					android:layout_width="360dp"
					android:layout_height="62dp" />

				<TextView
					android:id="@+id/name"
					android:textSize="14sp"
					android:textColor="@color/name_color"
					android:layout_marginLeft="58dp"
					android:layout_marginTop="163dp"
					android:layout_width="58dp"
					android:layout_height="29dp"
					android:text="@string/name_string" />

				<ImageView
					android:id="@+id/vector"
					android:src="@drawable/vector"
					android:contentDescription="vector"
					android:layout_marginStart="21dp"
					android:layout_marginTop="162dp"
					android:layout_width="17.18dp"
					android:layout_height="20dp" />

				<View
					android:id="@+id/rectangle_ek1"
					android:background="@drawable/rectangle_ek1_shape"
					android:layout_marginStart="0dp"
					android:layout_marginTop="219dp"
					android:layout_width="360dp"
					android:layout_height="62dp" />

				<TextView
					android:id="@+id/username"
					android:textSize="14sp"
					android:textColor="@color/name_color"
					android:layout_marginLeft="57dp"
					android:layout_marginTop="240dp"
					android:layout_width="87dp"
					android:layout_height="29dp"
					android:text="@string/username_string" />

				<ImageView
					android:id="@+id/vector_ek1"
					android:src="@drawable/vector_ek1"
					android:contentDescription="vector_ek1"
					android:layout_marginStart="21dp"
					android:layout_marginTop="239dp"
					android:layout_width="18dp"
					android:layout_height="19.99dp" />

				<ImageView
					android:id="@+id/vector_ek2"
					android:src="@drawable/vector_ek2"
					android:contentDescription="vector_ek2"
					android:layout_marginStart="26dp"
					android:layout_marginTop="242dp"
					android:layout_width="8dp"
					android:layout_height="10.32dp" />

				<View
					android:id="@+id/rectangle_ek2"
					android:background="@drawable/rectangle_ek2_shape"
					android:layout_marginStart="0dp"
					android:layout_marginTop="296dp"
					android:layout_width="360dp"
					android:layout_height="62dp" />

				<TextView
					android:id="@+id/email"
					android:textSize="14sp"
					android:textColor="@color/name_color"
					android:layout_marginLeft="57dp"
					android:layout_marginTop="318dp"
					android:layout_width="55dp"
					android:layout_height="29dp"
					android:text="@string/email_string" />


				<RelativeLayout
					android:id="@+id/curved___mail"
					android:layout_marginTop="314dp"
					android:layout_marginStart="18dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" >

					<ImageView
						android:id="@+id/shape_ek1"
						android:src="@drawable/shape_ek1"
						android:contentDescription="shape"
						android:layout_marginStart="2.5dp"
						android:layout_marginTop="4.5dp"
						android:layout_width="19dp"
						android:layout_height="15dp" />

				</RelativeLayout>

				<View
					android:id="@+id/rectangle_ek3"
					android:background="@drawable/rectangle_ek3_shape"
					android:layout_marginStart="0dp"
					android:layout_marginTop="373dp"
					android:layout_width="360dp"
					android:layout_height="62dp" />

				<TextView
					android:id="@+id/password"
					android:textSize="14sp"
					android:textColor="@color/name_color"
					android:layout_marginLeft="57dp"
					android:layout_marginTop="394dp"
					android:layout_width="83dp"
					android:layout_height="29dp"
					android:text="@string/password_string" />


				<RelativeLayout
					android:id="@+id/curved___lock_on"
					android:layout_marginTop="391dp"
					android:layout_marginStart="21dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" >

					<ImageView
						android:id="@+id/shape_ek2"
						android:layout_width="13dp"
						android:layout_height="17dp"
						android:layout_marginStart="5dp"
						android:layout_marginTop="3dp"
						android:contentDescription="shape_ek1"
						android:src="@drawable/shape_ek2" />

				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/curved___eye_closed"
					android:layout_marginTop="391dp"
					android:layout_marginStart="310dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" >

					<ImageView
						android:id="@+id/shape_ek3"
						android:src="@drawable/shape_ek3"
						android:contentDescription="shape_ek2"
						android:layout_marginStart="2.83dp"
						android:layout_marginTop="3dp"
						android:layout_width="18.34dp"
						android:layout_height="18dp" />

				</RelativeLayout>

			</RelativeLayout>

		</RelativeLayout>

	</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>